feat(AdminUserProfile) : 프로필 조회용 mapper 클래스에 mapGenerations 메서드 추가